# helloworld-web-gen2

./: .drone.yml  .gitignore  Makefile  go.mod  shit.txt  sonar-project.properties
kubernetes/: deployment.yml  helloworld-web-namespace.yaml  helloworld-web-service-account.yml  helloworld-web.yml
tests/inspec/helloworld-web/: inspec.out  inspec.yml
tests/inspec/helloworld-web/controls/: helloworld-web.rb
tests/selenium/func-test-helloworld-web/: pyproject.toml
tests/selenium/func-test-helloworld-web/func_test_helloworld_web/: test.py
tests/selenium/func-test-helloworld-web/tests/: test_func_test_helloworld_web.py
